<resources>
    <string name="app_name">Application1-Login</string>
    <string name="login">LOGIN</string>
    <string name="register_here">Register Here</string>
    <string name="welcome">Welcome</string>
    <string name="please_login_your_information">Please login your information</string>
    <string name="Username">Username</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="please_enter_your_information">Please enter your Information</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="contact_number">Contact Number</string>
    <string name="blood_type">Blood Type</string>
    <string name="name_of_parent_guardian">Name of Parent/Guardian</string>
    <string name="emergency_contact_number">Emergency Contact Number</string>
    <string name="log_out">Log Out</string>
    <string name="account_settings">Account Settings</string>
    <string name="personal_information">Personal Information</string>
    <string name="privacy_and_sharing">Privacy and Sharing</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="notification">Notification</string>
    <string name="about">About</string>
    <string name="About">About</string>
    <string name="add_contact">Add Contact</string>
</resources>