<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SettingsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:id="@+id/top_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/bgcolor" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="28dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:text="@string/account_settings"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/PersonalInformation"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:cardBackgroundColor="#ede7f6"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:cardUseCompatPadding="true">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="25dp"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/next" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="22dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="left"
                        android:text="@string/personal_information"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/PrivacyAndSharing"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:cardBackgroundColor="#ede7f6"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:cardUseCompatPadding="true">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="25dp"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/next" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="22dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="left"
                        android:text="@string/privacy_and_sharing"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                </androidx.cardview.widget.CardView>


                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:text="@string/notification_settings"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/Notification"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:cardBackgroundColor="#ede7f6"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:cardUseCompatPadding="true">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="25dp"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/next" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="22dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="left"
                        android:text="@string/notification"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:text="@string/about"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/About"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:cardBackgroundColor="#ede7f6"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:cardUseCompatPadding="true">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="25dp"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/next" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="22dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="left"
                        android:text="@string/About"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="20dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/LogoutID"
                    android:layout_width="260dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:text="@string/log_out"
                    android:textColor="@color/red"
                    android:textSize="16sp"
                    app:backgroundTint="@color/lightred"
                    app:cornerRadius="20dp" />

            </GridLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="90dp"
            android:text="Settings"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>